--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n-mocker",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "description": "mock services and http api with nodejs",
   "main": "lib",
   "files": [
@@ -31,6 +31,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "chokidar": "^1.6.1",
+    "fclone": "^1.0.11",
     "http-proxy": "^1.15.2",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.1.0",
